* Basic moving and updating of mysql. makefile.fpc's included, regened makefiles not.      fpmake also in separate commit (will follow shortly)
git-svn-id: trunk@9922 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1164,40 +1164,9 @@ packages/base/libc/wordsizeh.inc svneol=native#text/plain
 packages/base/libc/xlocaleh.inc svneol=native#text/plain
 packages/base/libc/xopen_limh.inc svneol=native#text/plain
 packages/base/mysql/Makefile svneol=native#text/plain
-packages/base/mysql/Makefile.fpc svneol=native#text/plain
 packages/base/mysql/README -text
 packages/base/mysql/fpmake.inc svneol=native#text/plain
 packages/base/mysql/fpmake.pp svneol=native#text/plain
-packages/base/mysql/mkdb -text
-packages/base/mysql/my4_sys.pp svneol=native#text/plain
-packages/base/mysql/mysql.inc svneol=native#text/plain
-packages/base/mysql/mysql3.pp svneol=native#text/plain
-packages/base/mysql/mysql3_com.pp svneol=native#text/plain
-packages/base/mysql/mysql3_comdyn.pp svneol=native#text/plain
-packages/base/mysql/mysql3_comtypes.inc svneol=native#text/plain
-packages/base/mysql/mysql3_version.pp svneol=native#text/plain
-packages/base/mysql/mysql3dyn.pp svneol=native#text/plain
-packages/base/mysql/mysql3impl.inc svneol=native#text/plain
-packages/base/mysql/mysql3types.inc svneol=native#text/plain
-packages/base/mysql/mysql4.pp svneol=native#text/plain
-packages/base/mysql/mysql40.pp svneol=native#text/plain
-packages/base/mysql/mysql40dyn.pp svneol=native#text/plain
-packages/base/mysql/mysql41.pp svneol=native#text/plain
-packages/base/mysql/mysql41dyn.pp svneol=native#text/plain
-packages/base/mysql/mysql4_com.pp svneol=native#text/plain
-packages/base/mysql/mysql4_comdyn.pp svneol=native#text/plain
-packages/base/mysql/mysql4_comtypes.inc svneol=native#text/plain
-packages/base/mysql/mysql4_version.pp svneol=native#text/plain
-packages/base/mysql/mysql4dyn.pp svneol=native#text/plain
-packages/base/mysql/mysql4impl.inc svneol=native#text/plain
-packages/base/mysql/mysql4types.inc svneol=native#text/plain
-packages/base/mysql/mysql50.pp svneol=native#text/plain
-packages/base/mysql/mysql50dyn.pp svneol=native#text/plain
-packages/base/mysql/mysqls.c -text
-packages/base/mysql/mysqls.pp svneol=native#text/plain
-packages/base/mysql/rmdb -text
-packages/base/mysql/testdb3.pp svneol=native#text/plain
-packages/base/mysql/testdb4.pp svneol=native#text/plain
 packages/base/mysql/ver322/mysql.pp svneol=native#text/plain
 packages/base/mysql/ver322/mysql_com.pp svneol=native#text/plain
 packages/base/mysql/ver322/mysql_version.pp svneol=native#text/plain
@@ -4305,6 +4274,37 @@ packages/hash/src/md5.pp svneol=native#text/plain
 packages/hash/src/ntlm.pas svneol=native#text/plain
 packages/hash/src/unixcrypt.pas svneol=native#text/plain
 packages/hash/src/uuid.pas svneol=native#text/plain
+packages/mysql/Makefile.fpc svneol=native#text/plain
+packages/mysql/scripts/mkdb svneol=native#text/plain
+packages/mysql/scripts/rmdb svneol=native#text/plain
+packages/mysql/src/my4_sys.pp svneol=native#text/plain
+packages/mysql/src/mysql.inc svneol=native#text/plain
+packages/mysql/src/mysql3.pp svneol=native#text/plain
+packages/mysql/src/mysql3_com.pp svneol=native#text/plain
+packages/mysql/src/mysql3_comdyn.pp svneol=native#text/plain
+packages/mysql/src/mysql3_comtypes.inc svneol=native#text/plain
+packages/mysql/src/mysql3_version.pp svneol=native#text/plain
+packages/mysql/src/mysql3dyn.pp svneol=native#text/plain
+packages/mysql/src/mysql3impl.inc svneol=native#text/plain
+packages/mysql/src/mysql3types.inc svneol=native#text/plain
+packages/mysql/src/mysql4.pp svneol=native#text/plain
+packages/mysql/src/mysql40.pp svneol=native#text/plain
+packages/mysql/src/mysql40dyn.pp svneol=native#text/plain
+packages/mysql/src/mysql41.pp svneol=native#text/plain
+packages/mysql/src/mysql41dyn.pp svneol=native#text/plain
+packages/mysql/src/mysql4_com.pp svneol=native#text/plain
+packages/mysql/src/mysql4_comdyn.pp svneol=native#text/plain
+packages/mysql/src/mysql4_comtypes.inc svneol=native#text/plain
+packages/mysql/src/mysql4_version.pp svneol=native#text/plain
+packages/mysql/src/mysql4dyn.pp svneol=native#text/plain
+packages/mysql/src/mysql4impl.inc svneol=native#text/plain
+packages/mysql/src/mysql4types.inc svneol=native#text/plain
+packages/mysql/src/mysql50.pp svneol=native#text/plain
+packages/mysql/src/mysql50dyn.pp svneol=native#text/plain
+packages/mysql/tests/mysqls.c svneol=native#text/plain
+packages/mysql/tests/mysqls.pp svneol=native#text/plain
+packages/mysql/tests/testdb3.pp svneol=native#text/plain
+packages/mysql/tests/testdb4.pp svneol=native#text/plain
 packages/pasjpeg/Makefile svneol=native#text/plain
 packages/pasjpeg/Makefile.fpc svneol=native#text/plain
 packages/pasjpeg/examples/cderror.pas svneol=native#text/plain
