--- a/.gitattributes
+++ b/.gitattributes
@@ -875,19 +875,8 @@ packages/base/httpd/httpd-2.2/util_md5.inc svneol=native#text/plain
 packages/base/httpd/httpd-2.2/util_script.inc svneol=native#text/plain
 packages/base/httpd/httpd-2.2/util_time.inc svneol=native#text/plain
 packages/base/ibase/Makefile svneol=native#text/plain
-packages/base/ibase/Makefile.fpc svneol=native#text/plain
-packages/base/ibase/README -text
 packages/base/ibase/fpmake.inc svneol=native#text/plain
 packages/base/ibase/fpmake.pp svneol=native#text/plain
-packages/base/ibase/ibase40.pp svneol=native#text/plain
-packages/base/ibase/ibase60.inc svneol=native#text/plain
-packages/base/ibase/ibase60.pp svneol=native#text/plain
-packages/base/ibase/ibase60dyn.pp svneol=native#text/plain
-packages/base/ibase/mkdb -text
-packages/base/ibase/mkdb.bat -text
-packages/base/ibase/mkdb.sqd -text
-packages/base/ibase/testib40.pp svneol=native#text/plain
-packages/base/ibase/testib60.pp svneol=native#text/plain
 packages/base/imagemagick/Makefile svneol=native#text/plain
 packages/base/imagemagick/Makefile.fpc svneol=native#text/plain
 packages/base/imagemagick/buildim.pp svneol=native#text/plain
@@ -4274,6 +4263,17 @@ packages/hash/src/md5.pp svneol=native#text/plain
 packages/hash/src/ntlm.pas svneol=native#text/plain
 packages/hash/src/unixcrypt.pas svneol=native#text/plain
 packages/hash/src/uuid.pas svneol=native#text/plain
+packages/ibase/Makefile.fpc svneol=native#text/plain
+packages/ibase/README svneol=native#text/plain
+packages/ibase/scripts/mkdb svneol=native#text/plain
+packages/ibase/scripts/mkdb.bat svneol=native#text/plain
+packages/ibase/scripts/mkdb.sqd svneol=native#text/plain
+packages/ibase/src/ibase40.pp svneol=native#text/plain
+packages/ibase/src/ibase60.inc svneol=native#text/plain
+packages/ibase/src/ibase60.pp svneol=native#text/plain
+packages/ibase/src/ibase60dyn.pp svneol=native#text/plain
+packages/ibase/tests/testib40.pp svneol=native#text/plain
+packages/ibase/tests/testib60.pp svneol=native#text/plain
 packages/mysql/Makefile.fpc svneol=native#text/plain
 packages/mysql/fpmake.pp svneol=native#text/plain
 packages/mysql/scripts/mkdb svneol=native#text/plain
