* removed exces files + mysql/readme move
git-svn-id: trunk@9929 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -874,9 +874,6 @@ packages/base/httpd/httpd-2.2/util_filter.inc svneol=native#text/plain
 packages/base/httpd/httpd-2.2/util_md5.inc svneol=native#text/plain
 packages/base/httpd/httpd-2.2/util_script.inc svneol=native#text/plain
 packages/base/httpd/httpd-2.2/util_time.inc svneol=native#text/plain
-packages/base/ibase/Makefile svneol=native#text/plain
-packages/base/ibase/fpmake.inc svneol=native#text/plain
-packages/base/ibase/fpmake.pp svneol=native#text/plain
 packages/base/imagemagick/Makefile svneol=native#text/plain
 packages/base/imagemagick/Makefile.fpc svneol=native#text/plain
 packages/base/imagemagick/buildim.pp svneol=native#text/plain
@@ -1152,10 +1149,6 @@ packages/base/libc/wordexph.inc svneol=native#text/plain
 packages/base/libc/wordsizeh.inc svneol=native#text/plain
 packages/base/libc/xlocaleh.inc svneol=native#text/plain
 packages/base/libc/xopen_limh.inc svneol=native#text/plain
-packages/base/mysql/Makefile svneol=native#text/plain
-packages/base/mysql/README -text
-packages/base/mysql/fpmake.inc svneol=native#text/plain
-packages/base/mysql/fpmake.pp svneol=native#text/plain
 packages/base/mysql/ver322/mysql.pp svneol=native#text/plain
 packages/base/mysql/ver322/mysql_com.pp svneol=native#text/plain
 packages/base/mysql/ver322/mysql_version.pp svneol=native#text/plain
@@ -4278,6 +4271,7 @@ packages/ibase/tests/testib40.pp svneol=native#text/plain
 packages/ibase/tests/testib60.pp svneol=native#text/plain
 packages/mysql/Makefile svneol=native#text/plain
 packages/mysql/Makefile.fpc svneol=native#text/plain
+packages/mysql/README svneol=native#text/plain
 packages/mysql/fpmake.pp svneol=native#text/plain
 packages/mysql/scripts/mkdb svneol=native#text/plain
 packages/mysql/scripts/rmdb svneol=native#text/plain
