* ncurses moved. makefile.fpc + fpmake included, makefile in separate commit
git-svn-id: trunk@9930 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2590,25 +2590,8 @@ packages/extra/modplug/Makefile svneol=native#text/plain
 packages/extra/modplug/Makefile.fpc svneol=native#text/plain
 packages/extra/modplug/modplug.pas svneol=native#text/plain
 packages/extra/ncurses/Makefile svneol=native#text/plain
-packages/extra/ncurses/Makefile.fpc svneol=native#text/plain
-packages/extra/ncurses/db_demo.pp svneol=native#text/plain
-packages/extra/ncurses/edit_demo.pp svneol=native#text/plain
-packages/extra/ncurses/eti.inc svneol=native#text/plain
-packages/extra/ncurses/firework.pp svneol=native#text/plain
 packages/extra/ncurses/fpmake.inc svneol=native#text/plain
 packages/extra/ncurses/fpmake.pp svneol=native#text/plain
-packages/extra/ncurses/menu.pp svneol=native#text/plain
-packages/extra/ncurses/menu_demo.pp svneol=native#text/plain
-packages/extra/ncurses/ncrt.inc svneol=native#text/plain
-packages/extra/ncurses/ncrt.pp svneol=native#text/plain
-packages/extra/ncurses/ncurses.pp svneol=native#text/plain
-packages/extra/ncurses/ocrt.pp svneol=native#text/plain
-packages/extra/ncurses/ocrt_demo.pp svneol=native#text/plain
-packages/extra/ncurses/panel.pp svneol=native#text/plain
-packages/extra/ncurses/pxpic.inc svneol=native#text/plain
-packages/extra/ncurses/pxpic.txt svneol=native#text/plain
-packages/extra/ncurses/screen_demo.pp svneol=native#text/plain
-packages/extra/ncurses/testn.pp svneol=native#text/plain
 packages/extra/newt/Makefile svneol=native#text/plain
 packages/extra/newt/Makefile.fpc svneol=native#text/plain
 packages/extra/newt/README -text
@@ -4303,6 +4286,24 @@ packages/mysql/tests/mysqls.c svneol=native#text/plain
 packages/mysql/tests/mysqls.pp svneol=native#text/plain
 packages/mysql/tests/testdb3.pp svneol=native#text/plain
 packages/mysql/tests/testdb4.pp svneol=native#text/plain
+packages/ncurses/Makefile.fpc svneol=native#text/plain
+packages/ncurses/examples/db_demo.pp svneol=native#text/plain
+packages/ncurses/examples/edit_demo.pp svneol=native#text/plain
+packages/ncurses/examples/firework.pp svneol=native#text/plain
+packages/ncurses/examples/menu_demo.pp svneol=native#text/plain
+packages/ncurses/examples/ocrt_demo.pp svneol=native#text/plain
+packages/ncurses/examples/screen_demo.pp svneol=native#text/plain
+packages/ncurses/fpmake.pp svneol=native#text/plain
+packages/ncurses/src/eti.inc svneol=native#text/plain
+packages/ncurses/src/menu.pp svneol=native#text/plain
+packages/ncurses/src/ncrt.inc svneol=native#text/plain
+packages/ncurses/src/ncrt.pp svneol=native#text/plain
+packages/ncurses/src/ncurses.pp svneol=native#text/plain
+packages/ncurses/src/ocrt.pp svneol=native#text/plain
+packages/ncurses/src/panel.pp svneol=native#text/plain
+packages/ncurses/src/pxpic.inc svneol=native#text/plain
+packages/ncurses/src/pxpic.txt svneol=native#text/plain
+packages/ncurses/tests/testn.pp svneol=native#text/plain
 packages/pasjpeg/Makefile svneol=native#text/plain
 packages/pasjpeg/Makefile.fpc svneol=native#text/plain
 packages/pasjpeg/examples/cderror.pas svneol=native#text/plain
