--- a/.gitattributes
+++ b/.gitattributes
@@ -3556,12 +3556,8 @@ packages/extra/unixutil/fpmake.inc svneol=native#text/plain
 packages/extra/unixutil/fpmake.pp svneol=native#text/plain
 packages/extra/unixutil/unixutils.pp svneol=native#text/plain
 packages/extra/unzip/Makefile svneol=native#text/plain
-packages/extra/unzip/Makefile.fpc svneol=native#text/plain
 packages/extra/unzip/fpmake.inc svneol=native#text/plain
 packages/extra/unzip/fpmake.pp svneol=native#text/plain
-packages/extra/unzip/unzip.pp svneol=native#text/plain
-packages/extra/unzip/unzipdll.pp svneol=native#text/plain
-packages/extra/unzip/ziptypes.pp svneol=native#text/plain
 packages/extra/users/fpmake.pp svneol=native#text/plain
 packages/extra/users/grp.pp svneol=native#text/plain
 packages/extra/users/pwd.pp svneol=native#text/plain
@@ -4431,6 +4427,11 @@ packages/paszlib/src/zipper.pp svneol=native#text/plain
 packages/paszlib/src/ziputils.pas svneol=native#text/plain
 packages/paszlib/src/zstream.pp svneol=native#text/plain
 packages/paszlib/src/zuncompr.pas svneol=native#text/plain
+packages/unzip/Makefile.fpc svneol=native#text/plain
+packages/unzip/fpmake.pp svneol=native#text/plain
+packages/unzip/src/unzip.pp svneol=native#text/plain
+packages/unzip/src/unzipdll.pp svneol=native#text/plain
+packages/unzip/src/ziptypes.pp svneol=native#text/plain
 packages/winunits-base/Makefile svneol=native#text/plain
 packages/winunits-base/Makefile.fpc svneol=native#text/plain
 packages/winunits-base/fpmake.pp svneol=native#text/plain
