* oracle moved + makefile.fpc + fpmake
git-svn-id: trunk@9934 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1170,28 +1170,9 @@ packages/base/odbc/odbcsqldyn.pas svneol=native#text/plain
 packages/base/odbc/testodbc.mdb -text
 packages/base/odbc/testodbc.pp svneol=native#text/plain
 packages/base/oracle/Makefile svneol=native#text/plain
-packages/base/oracle/Makefile.fpc svneol=native#text/plain
-packages/base/oracle/README -text
 packages/base/oracle/example/Makefile svneol=native#text/plain
-packages/base/oracle/example/Makefile.fpc svneol=native#text/plain
-packages/base/oracle/example/oraclew.pp svneol=native#text/plain
-packages/base/oracle/example/test01.pp svneol=native#text/plain
 packages/base/oracle/fpmake.inc svneol=native#text/plain
 packages/base/oracle/fpmake.pp svneol=native#text/plain
-packages/base/oracle/nzerror.inc -text
-packages/base/oracle/nzt.inc -text
-packages/base/oracle/oci.inc -text
-packages/base/oracle/oci.pp -text
-packages/base/oracle/oci1.inc -text
-packages/base/oracle/ociap.inc -text
-packages/base/oracle/ocidfn.inc -text
-packages/base/oracle/ocidyn.pp -text
-packages/base/oracle/oraoci.pp svneol=native#text/plain
-packages/base/oracle/oratypes.pp -text
-packages/base/oracle/orl.inc -text
-packages/base/oracle/oro_implementation.inc -text
-packages/base/oracle/oro_interface.inc -text
-packages/base/oracle/ort.inc -text
 packages/base/postgres/Makefile svneol=native#text/plain
 packages/base/postgres/Makefile.fpc svneol=native#text/plain
 packages/base/postgres/README -text
@@ -4289,6 +4270,25 @@ packages/ncurses/src/panel.pp svneol=native#text/plain
 packages/ncurses/src/pxpic.inc svneol=native#text/plain
 packages/ncurses/src/pxpic.txt svneol=native#text/plain
 packages/ncurses/tests/testn.pp svneol=native#text/plain
+packages/oracle/Makefile.fpc svneol=native#text/plain
+packages/oracle/README svneol=native#text/plain
+packages/oracle/examples/Makefile.fpc svneol=native#text/plain
+packages/oracle/examples/oraclew.pp svneol=native#text/plain
+packages/oracle/examples/test01.pp svneol=native#text/plain
+packages/oracle/src/nzerror.inc svneol=native#text/plain
+packages/oracle/src/nzt.inc svneol=native#text/plain
+packages/oracle/src/oci.inc svneol=native#text/plain
+packages/oracle/src/oci.pp svneol=native#text/plain
+packages/oracle/src/oci1.inc svneol=native#text/plain
+packages/oracle/src/ociap.inc svneol=native#text/plain
+packages/oracle/src/ocidfn.inc svneol=native#text/plain
+packages/oracle/src/ocidyn.pp svneol=native#text/plain
+packages/oracle/src/oraoci.pp svneol=native#text/plain
+packages/oracle/src/oratypes.pp svneol=native#text/plain
+packages/oracle/src/orl.inc svneol=native#text/plain
+packages/oracle/src/oro_implementation.inc svneol=native#text/plain
+packages/oracle/src/oro_interface.inc svneol=native#text/plain
+packages/oracle/src/ort.inc svneol=native#text/plain
 packages/pasjpeg/Makefile svneol=native#text/plain
 packages/pasjpeg/Makefile.fpc svneol=native#text/plain
 packages/pasjpeg/examples/cderror.pas svneol=native#text/plain
