--- a/.gitattributes
+++ b/.gitattributes
@@ -706,28 +706,6 @@ packages/Makefile svneol=native#text/plain
 packages/Makefile.fpc svneol=native#text/plain
 packages/base/Makefile svneol=native#text/plain
 packages/base/Makefile.fpc svneol=native#text/plain
-packages/base/dbus/Makefile svneol=native#text/plain
-packages/base/dbus/Makefile.fpc svneol=native#text/plain
-packages/base/dbus/dbus-address.inc svneol=native#text/plain
-packages/base/dbus/dbus-arch-deps.inc svneol=native#text/plain
-packages/base/dbus/dbus-bus.inc svneol=native#text/plain
-packages/base/dbus/dbus-connection.inc svneol=native#text/plain
-packages/base/dbus/dbus-errors.inc svneol=native#text/plain
-packages/base/dbus/dbus-macros.inc svneol=native#text/plain
-packages/base/dbus/dbus-memory.inc svneol=native#text/plain
-packages/base/dbus/dbus-message.inc svneol=native#text/plain
-packages/base/dbus/dbus-pending-call.inc svneol=native#text/plain
-packages/base/dbus/dbus-protocol.inc svneol=native#text/plain
-packages/base/dbus/dbus-server.inc svneol=native#text/plain
-packages/base/dbus/dbus-shared.inc svneol=native#text/plain
-packages/base/dbus/dbus-signature.inc svneol=native#text/plain
-packages/base/dbus/dbus-threads.inc svneol=native#text/plain
-packages/base/dbus/dbus-types.inc svneol=native#text/plain
-packages/base/dbus/dbus.pas svneol=native#text/plain
-packages/base/dbus/dbus_arch_deps.inc svneol=native#text/plain
-packages/base/dbus/example/Makefile svneol=native#text/plain
-packages/base/dbus/example/Makefile.fpc svneol=native#text/plain
-packages/base/dbus/example/busexample.pp svneol=native#text/plain
 packages/base/gdbint/Makefile svneol=native#text/plain
 packages/base/gdbint/Makefile.fpc svneol=native#text/plain
 packages/base/gdbint/fpmake.inc svneol=native#text/plain
@@ -1217,6 +1195,29 @@ packages/base/sqlite/sqlitedb.pas svneol=native#text/plain
 packages/base/sqlite/test.pas svneol=native#text/plain
 packages/base/sqlite/testapiv3x.README -text
 packages/base/sqlite/testapiv3x.pp -text
+packages/dbus/Makefile svneol=native#text/plain
+packages/dbus/Makefile.fpc svneol=native#text/plain
+packages/dbus/examples/Makefile svneol=native#text/plain
+packages/dbus/examples/Makefile.fpc svneol=native#text/plain
+packages/dbus/examples/busexample.pp svneol=native#text/plain
+packages/dbus/fpmake.pp svneol=native#text/plain
+packages/dbus/src/dbus-address.inc svneol=native#text/plain
+packages/dbus/src/dbus-arch-deps.inc svneol=native#text/plain
+packages/dbus/src/dbus-bus.inc svneol=native#text/plain
+packages/dbus/src/dbus-connection.inc svneol=native#text/plain
+packages/dbus/src/dbus-errors.inc svneol=native#text/plain
+packages/dbus/src/dbus-macros.inc svneol=native#text/plain
+packages/dbus/src/dbus-memory.inc svneol=native#text/plain
+packages/dbus/src/dbus-message.inc svneol=native#text/plain
+packages/dbus/src/dbus-pending-call.inc svneol=native#text/plain
+packages/dbus/src/dbus-protocol.inc svneol=native#text/plain
+packages/dbus/src/dbus-server.inc svneol=native#text/plain
+packages/dbus/src/dbus-shared.inc svneol=native#text/plain
+packages/dbus/src/dbus-signature.inc svneol=native#text/plain
+packages/dbus/src/dbus-threads.inc svneol=native#text/plain
+packages/dbus/src/dbus-types.inc svneol=native#text/plain
+packages/dbus/src/dbus.pas svneol=native#text/plain
+packages/dbus/src/dbus_arch_deps.inc svneol=native#text/plain
 packages/extra/Makefile svneol=native#text/plain
 packages/extra/Makefile.fpc svneol=native#text/plain
 packages/extra/a52/Makefile svneol=native#text/plain
