--- a/.gitattributes
+++ b/.gitattributes
@@ -4413,6 +4413,11 @@ packages/paszlib/src/zipper.pp svneol=native#text/plain
 packages/paszlib/src/ziputils.pas svneol=native#text/plain
 packages/paszlib/src/zstream.pp svneol=native#text/plain
 packages/paszlib/src/zuncompr.pas svneol=native#text/plain
+packages/regexpr/Makefile svneol=native#text/plain
+packages/regexpr/Makefile.fpc svneol=native#text/plain
+packages/regexpr/fpmake.pp svneol=native#text/plain
+packages/regexpr/src/regexpr.pp svneol=native#text/plain
+packages/regexpr/tests/testreg1.pp svneol=native#text/plain
 packages/unzip/Makefile.fpc svneol=native#text/plain
 packages/unzip/fpmake.pp svneol=native#text/plain
 packages/unzip/src/unzip.pp svneol=native#text/plain
