* postgres and sqlite moved
git-svn-id: trunk@9945 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4407,11 +4407,37 @@ packages/paszlib/src/zipper.pp svneol=native#text/plain
 packages/paszlib/src/ziputils.pas svneol=native#text/plain
 packages/paszlib/src/zstream.pp svneol=native#text/plain
 packages/paszlib/src/zuncompr.pas svneol=native#text/plain
+packages/postgres/Makefile svneol=native#text/plain
+packages/postgres/Makefile.fpc svneol=native#text/plain
+packages/postgres/README svneol=native#text/plain
+packages/postgres/fpmake.pp svneol=native#text/plain
+packages/postgres/scripts/mkdb svneol=native#text/plain
+packages/postgres/scripts/rmdb svneol=native#text/plain
+packages/postgres/src/dllist.pp svneol=native#text/plain
+packages/postgres/src/dllistdyn.pp svneol=native#text/plain
+packages/postgres/src/dllisttypes.inc svneol=native#text/plain
+packages/postgres/src/postgres.pp svneol=native#text/plain
+packages/postgres/src/postgres3.pp svneol=native#text/plain
+packages/postgres/src/postgres3dyn.pp svneol=native#text/plain
+packages/postgres/src/postgres3types.inc svneol=native#text/plain
+packages/postgres/tests/testpg1.pp svneol=native#text/plain
+packages/postgres/tests/testpg2.pp svneol=native#text/plain
 packages/regexpr/Makefile svneol=native#text/plain
 packages/regexpr/Makefile.fpc svneol=native#text/plain
 packages/regexpr/fpmake.pp svneol=native#text/plain
 packages/regexpr/src/regexpr.pp svneol=native#text/plain
 packages/regexpr/tests/testreg1.pp svneol=native#text/plain
+packages/sqlite/Makefile.fpc svneol=native#text/plain
+packages/sqlite/fpmake.pp svneol=native#text/plain
+packages/sqlite/src/sqlite.pp svneol=native#text/plain
+packages/sqlite/src/sqlite3.inc svneol=native#text/plain
+packages/sqlite/src/sqlite3.pp svneol=native#text/plain
+packages/sqlite/src/sqlite3db.pas svneol=native#text/x-pascal
+packages/sqlite/src/sqlite3dyn.pp svneol=native#text/plain
+packages/sqlite/src/sqlitedb.pas svneol=native#text/plain
+packages/sqlite/tests/test.pas svneol=native#text/plain
+packages/sqlite/tests/testapiv3x.README svneol=native#text/plain
+packages/sqlite/tests/testapiv3x.pp svneol=native#text/plain
 packages/unzip/Makefile.fpc svneol=native#text/plain
 packages/unzip/fpmake.pp svneol=native#text/plain
 packages/unzip/src/unzip.pp svneol=native#text/plain
