+ added missing Makefiles   * regenerated packages/extra Makefile after several packages were     moved
git-svn-id: trunk@9946 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4234,6 +4234,7 @@ packages/mysql/tests/mysqls.c svneol=native#text/plain
 packages/mysql/tests/mysqls.pp svneol=native#text/plain
 packages/mysql/tests/testdb3.pp svneol=native#text/plain
 packages/mysql/tests/testdb4.pp svneol=native#text/plain
+packages/ncurses/Makefile svneol=native#text/plain
 packages/ncurses/Makefile.fpc svneol=native#text/plain
 packages/ncurses/examples/db_demo.pp svneol=native#text/plain
 packages/ncurses/examples/edit_demo.pp svneol=native#text/plain
@@ -4261,8 +4262,10 @@ packages/odbc/src/odbcsql.pas svneol=native#text/plain
 packages/odbc/src/odbcsqldyn.pas svneol=native#text/plain
 packages/odbc/tests/testodbc.mdb -text
 packages/odbc/tests/testodbc.pp svneol=native#text/plain
+packages/oracle/Makefile svneol=native#text/plain
 packages/oracle/Makefile.fpc svneol=native#text/plain
 packages/oracle/README svneol=native#text/plain
+packages/oracle/examples/Makefile svneol=native#text/plain
 packages/oracle/examples/Makefile.fpc svneol=native#text/plain
 packages/oracle/examples/oraclew.pp svneol=native#text/plain
 packages/oracle/examples/test01.pp svneol=native#text/plain
@@ -4438,6 +4441,7 @@ packages/sqlite/src/sqlitedb.pas svneol=native#text/plain
 packages/sqlite/tests/test.pas svneol=native#text/plain
 packages/sqlite/tests/testapiv3x.README svneol=native#text/plain
 packages/sqlite/tests/testapiv3x.pp svneol=native#text/plain
+packages/unzip/Makefile svneol=native#text/plain
 packages/unzip/Makefile.fpc svneol=native#text/plain
 packages/unzip/fpmake.pp svneol=native#text/plain
 packages/unzip/src/unzip.pp svneol=native#text/plain
@@ -4695,6 +4699,7 @@ packages/winunits-jedi/src/jwawsrm.pas svneol=native#text/plain
 packages/winunits-jedi/src/jwawsvns.pas svneol=native#text/plain
 packages/winunits-jedi/src/jwawtsapi32.pas svneol=native#text/plain
 packages/winunits-jedi/src/jwazmouse.pas svneol=native#text/plain
+packages/zlib/Makefile svneol=native#text/plain
 packages/zlib/Makefile.fpc svneol=native#text/plain
 packages/zlib/fpmake.pp svneol=native#text/plain
 packages/zlib/src/zlib.pp svneol=native#text/plain
