* missing files added
git-svn-id: trunk@9947 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4269,6 +4269,7 @@ packages/oracle/examples/Makefile svneol=native#text/plain
 packages/oracle/examples/Makefile.fpc svneol=native#text/plain
 packages/oracle/examples/oraclew.pp svneol=native#text/plain
 packages/oracle/examples/test01.pp svneol=native#text/plain
+packages/oracle/fpmake.pp svneol=native#text/plain
 packages/oracle/src/nzerror.inc svneol=native#text/plain
 packages/oracle/src/nzt.inc svneol=native#text/plain
 packages/oracle/src/oci.inc svneol=native#text/plain
@@ -4430,6 +4431,7 @@ packages/regexpr/Makefile.fpc svneol=native#text/plain
 packages/regexpr/fpmake.pp svneol=native#text/plain
 packages/regexpr/src/regexpr.pp svneol=native#text/plain
 packages/regexpr/tests/testreg1.pp svneol=native#text/plain
+packages/sqlite/Makefile svneol=native#text/plain
 packages/sqlite/Makefile.fpc svneol=native#text/plain
 packages/sqlite/fpmake.pp svneol=native#text/plain
 packages/sqlite/src/sqlite.pp svneol=native#text/plain
