--- a/.gitattributes
+++ b/.gitattributes
@@ -4426,6 +4426,14 @@ packages/postgres/src/postgres3dyn.pp svneol=native#text/plain
 packages/postgres/src/postgres3types.inc svneol=native#text/plain
 packages/postgres/tests/testpg1.pp svneol=native#text/plain
 packages/postgres/tests/testpg2.pp svneol=native#text/plain
+packages/pthreads/Makefile svneol=native#text/plain
+packages/pthreads/Makefile.fpc svneol=native#text/plain
+packages/pthreads/fpmake.pp svneol=native#text/plain
+packages/pthreads/src/pthrbeos.inc svneol=native#text/plain
+packages/pthreads/src/pthrbsd.inc svneol=native#text/plain
+packages/pthreads/src/pthreads.pp svneol=native#text/plain
+packages/pthreads/src/pthrlinux.inc svneol=native#text/plain
+packages/pthreads/src/pthrsnos.inc svneol=native#text/plain
 packages/regexpr/Makefile svneol=native#text/plain
 packages/regexpr/Makefile.fpc svneol=native#text/plain
 packages/regexpr/fpmake.pp svneol=native#text/plain
