--- a/.gitattributes
+++ b/.gitattributes
@@ -3912,6 +3912,33 @@ packages/ibase/src/ibase60.pp svneol=native#text/plain
 packages/ibase/src/ibase60dyn.pp svneol=native#text/plain
 packages/ibase/tests/testib40.pp svneol=native#text/plain
 packages/ibase/tests/testib60.pp svneol=native#text/plain
+packages/imagemagick/Makefile svneol=native#text/plain
+packages/imagemagick/Makefile.fpc svneol=native#text/plain
+packages/imagemagick/examples/image.png -text svneol=unset#image/png
+packages/imagemagick/examples/screenshot.lpr svneol=native#text/plain
+packages/imagemagick/examples/wanddemo.dpr svneol=native#text/plain
+packages/imagemagick/examples/wanddemo.lpr svneol=native#text/plain
+packages/imagemagick/fpmake.pp svneol=native#text/plain
+packages/imagemagick/src/buildim.pp svneol=native#text/plain
+packages/imagemagick/src/cache_view.inc svneol=native#text/plain
+packages/imagemagick/src/compare.inc svneol=native#text/plain
+packages/imagemagick/src/constitute.inc svneol=native#text/plain
+packages/imagemagick/src/draw.inc svneol=native#text/plain
+packages/imagemagick/src/drawing_wand.inc svneol=native#text/plain
+packages/imagemagick/src/effect.inc svneol=native#text/plain
+packages/imagemagick/src/fx.inc svneol=native#text/plain
+packages/imagemagick/src/imagemagick.pas svneol=native#text/plain
+packages/imagemagick/src/magick_attribute.inc svneol=native#text/plain
+packages/imagemagick/src/magick_image.inc svneol=native#text/plain
+packages/imagemagick/src/magick_type.inc svneol=native#text/plain
+packages/imagemagick/src/magick_wand.pas svneol=native#text/plain
+packages/imagemagick/src/pixel.inc svneol=native#text/plain
+packages/imagemagick/src/pixel_iterator.inc svneol=native#text/plain
+packages/imagemagick/src/pixel_wand.inc svneol=native#text/plain
+packages/imagemagick/src/quantize.inc svneol=native#text/plain
+packages/imagemagick/src/semaphore.inc svneol=native#text/plain
+packages/imagemagick/src/statistic.inc svneol=native#text/plain
+packages/imagemagick/src/type.inc svneol=native#text/plain
 packages/libc/Makefile svneol=native#text/plain
 packages/libc/Makefile.fpc svneol=native#text/plain
 packages/libc/README svneol=native#text/plain
