--- a/.gitattributes
+++ b/.gitattributes
@@ -3889,6 +3889,17 @@ packages/fv/src/unixsmsg.inc svneol=native#text/plain
 packages/fv/src/validate.pas svneol=native#text/plain
 packages/fv/src/views.pas svneol=native#text/plain
 packages/fv/src/w32smsg.inc svneol=native#text/plain
+packages/gdbint/Makefile svneol=native#text/plain
+packages/gdbint/Makefile.fpc svneol=native#text/plain
+packages/gdbint/fpmake.pp svneol=native#text/plain
+packages/gdbint/src/freadlin.pp svneol=native#text/x-pascal
+packages/gdbint/src/gdbcon.pp svneol=native#text/plain
+packages/gdbint/src/gdbint.pp svneol=native#text/plain
+packages/gdbint/src/gdbobjs.inc svneol=native#text/plain
+packages/gdbint/src/gdbver.pp svneol=native#text/plain
+packages/gdbint/src/gdbver_nogdb.inc svneol=native#text/x-pascal
+packages/gdbint/src/symify.pp svneol=native#text/plain
+packages/gdbint/src/testgdb.pp svneol=native#text/plain
 packages/hash/Makefile svneol=native#text/plain
 packages/hash/Makefile.fpc svneol=native#text/plain
 packages/hash/examples/md5.ref svneol=native#text/plain
