* libpng moved for Florian
git-svn-id: trunk@9952 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4200,6 +4200,10 @@ packages/libc/src/wordexph.inc svneol=native#text/plain
 packages/libc/src/wordsizeh.inc svneol=native#text/plain
 packages/libc/src/xlocaleh.inc svneol=native#text/plain
 packages/libc/src/xopen_limh.inc svneol=native#text/plain
+packages/libpng/Makefile svneol=native#text/plain
+packages/libpng/Makefile.fpc svneol=native#text/plain
+packages/libpng/fpmake.pp svneol=native#text/plain
+packages/libpng/src/png.pp svneol=native#text/plain
 packages/mysql/Makefile svneol=native#text/plain
 packages/mysql/Makefile.fpc svneol=native#text/plain
 packages/mysql/README svneol=native#text/plain
