--- a/.gitattributes
+++ b/.gitattributes
@@ -4412,6 +4412,10 @@ packages/sqlite/src/sqlitedb.pas svneol=native#text/plain
 packages/sqlite/tests/test.pas svneol=native#text/plain
 packages/sqlite/tests/testapiv3x.README svneol=native#text/plain
 packages/sqlite/tests/testapiv3x.pp svneol=native#text/plain
+packages/unixutil/Makefile svneol=native#text/plain
+packages/unixutil/Makefile.fpc svneol=native#text/plain
+packages/unixutil/fpmake.pp svneol=native#text/plain
+packages/unixutil/src/unixutils.pp svneol=native#text/plain
 packages/unzip/Makefile svneol=native#text/plain
 packages/unzip/Makefile.fpc svneol=native#text/plain
 packages/unzip/fpmake.pp svneol=native#text/plain
