--- a/.gitattributes
+++ b/.gitattributes
@@ -4674,6 +4674,30 @@ packages/winunits-jedi/src/jwawsrm.pas svneol=native#text/plain
 packages/winunits-jedi/src/jwawsvns.pas svneol=native#text/plain
 packages/winunits-jedi/src/jwawtsapi32.pas svneol=native#text/plain
 packages/winunits-jedi/src/jwazmouse.pas svneol=native#text/plain
+packages/x11/Makefile svneol=native#text/plain
+packages/x11/Makefile.fpc svneol=native#text/plain
+packages/x11/fpmake.pp svneol=native#text/plain
+packages/x11/src/cursorfont.pp svneol=native#text/plain
+packages/x11/src/keysym.pp svneol=native#text/plain
+packages/x11/src/randr.inc svneol=native#text/plain
+packages/x11/src/x.pp svneol=native#text/plain
+packages/x11/src/xatom.pp svneol=native#text/plain
+packages/x11/src/xcms.pp svneol=native#text/plain
+packages/x11/src/xf86dga.pp svneol=native#text/plain
+packages/x11/src/xf86dga1.inc svneol=native#text/plain
+packages/x11/src/xf86vmode.pp svneol=native#text/plain
+packages/x11/src/xi.pp svneol=native#text/plain
+packages/x11/src/xinerama.pp svneol=native#text/plain
+packages/x11/src/xkb.pp svneol=native#text/plain
+packages/x11/src/xkblib.pp svneol=native#text/plain
+packages/x11/src/xlib.pp svneol=native#text/plain
+packages/x11/src/xrandr.pp svneol=native#text/plain
+packages/x11/src/xrender.pp svneol=native#text/plain
+packages/x11/src/xresource.pp svneol=native#text/plain
+packages/x11/src/xshm.pp svneol=native#text/plain
+packages/x11/src/xutil.pp svneol=native#text/plain
+packages/x11/src/xv.pp svneol=native#text/plain
+packages/x11/src/xvlib.pp svneol=native#text/plain
 packages/zlib/Makefile svneol=native#text/plain
 packages/zlib/Makefile.fpc svneol=native#text/plain
 packages/zlib/fpmake.pp svneol=native#text/plain
