--- a/.gitattributes
+++ b/.gitattributes
@@ -4422,6 +4422,14 @@ packages/unzip/fpmake.pp svneol=native#text/plain
 packages/unzip/src/unzip.pp svneol=native#text/plain
 packages/unzip/src/unzipdll.pp svneol=native#text/plain
 packages/unzip/src/ziptypes.pp svneol=native#text/plain
+packages/uuid/Makefile svneol=native#text/plain
+packages/uuid/Makefile.fpc svneol=native#text/plain
+packages/uuid/README svneol=native#text/plain
+packages/uuid/fpmake.pp svneol=native#text/plain
+packages/uuid/src/libuuid.pp svneol=native#text/plain
+packages/uuid/src/macuuid.pp svneol=native#text/plain
+packages/uuid/tests/testlibuid.pp svneol=native#text/plain
+packages/uuid/tests/testuid.pp svneol=native#text/plain
 packages/winunits-base/Makefile svneol=native#text/plain
 packages/winunits-base/Makefile.fpc svneol=native#text/plain
 packages/winunits-base/fpmake.pp svneol=native#text/plain
