--- a/.gitattributes
+++ b/.gitattributes
@@ -3868,6 +3868,16 @@ packages/imagemagick/src/quantize.inc svneol=native#text/plain
 packages/imagemagick/src/semaphore.inc svneol=native#text/plain
 packages/imagemagick/src/statistic.inc svneol=native#text/plain
 packages/imagemagick/src/type.inc svneol=native#text/plain
+packages/ldap/Makefile svneol=native#text/plain
+packages/ldap/Makefile.fpc svneol=native#text/plain
+packages/ldap/fpmake.pp svneol=native#text/plain
+packages/ldap/src/lber.pas svneol=native#text/plain
+packages/ldap/src/lber_typesh.inc svneol=native#text/plain
+packages/ldap/src/lberh.inc svneol=native#text/plain
+packages/ldap/src/ldap.pas svneol=native#text/plain
+packages/ldap/src/ldap_featuresh.inc svneol=native#text/plain
+packages/ldap/src/ldap_schemah.inc svneol=native#text/plain
+packages/ldap/src/ldaph.inc svneol=native#text/plain
 packages/libc/Makefile svneol=native#text/plain
 packages/libc/Makefile.fpc svneol=native#text/plain
 packages/libc/README svneol=native#text/plain
