* mad,modplug,dts
git-svn-id: trunk@9968 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -873,6 +873,10 @@ packages/dbus/src/dbus-threads.inc svneol=native#text/plain
 packages/dbus/src/dbus-types.inc svneol=native#text/plain
 packages/dbus/src/dbus.pas svneol=native#text/plain
 packages/dbus/src/dbus_arch_deps.inc svneol=native#text/plain
+packages/dts/Makefile svneol=native#text/plain
+packages/dts/Makefile.fpc svneol=native#text/plain
+packages/dts/fpmake.pp svneol=native#text/plain
+packages/dts/src/dts.pas svneol=native#text/plain
 packages/extra/Makefile svneol=native#text/plain
 packages/extra/Makefile.fpc svneol=native#text/plain
 packages/extra/a52/Makefile svneol=native#text/plain
@@ -4132,6 +4136,14 @@ packages/libpng/Makefile svneol=native#text/plain
 packages/libpng/Makefile.fpc svneol=native#text/plain
 packages/libpng/fpmake.pp svneol=native#text/plain
 packages/libpng/src/png.pp svneol=native#text/plain
+packages/mad/Makefile svneol=native#text/plain
+packages/mad/Makefile.fpc svneol=native#text/plain
+packages/mad/fpmake.pp svneol=native#text/plain
+packages/mad/src/mad.pas svneol=native#text/plain
+packages/modplug/Makefile svneol=native#text/plain
+packages/modplug/Makefile.fpc svneol=native#text/plain
+packages/modplug/fpmake.pp svneol=native#text/plain
+packages/modplug/src/modplug.pas svneol=native#text/plain
 packages/mysql/Makefile svneol=native#text/plain
 packages/mysql/Makefile.fpc svneol=native#text/plain
 packages/mysql/README svneol=native#text/plain
