* gdbm tcl syslog libcurl
git-svn-id: trunk@9970 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3804,6 +3804,13 @@ packages/gdbint/src/gdbver.pp svneol=native#text/plain
 packages/gdbint/src/gdbver_nogdb.inc svneol=native#text/x-pascal
 packages/gdbint/src/symify.pp svneol=native#text/plain
 packages/gdbint/src/testgdb.pp svneol=native#text/plain
+packages/gdbm/Makefile svneol=native#text/plain
+packages/gdbm/Makefile.fpc svneol=native#text/plain
+packages/gdbm/README svneol=native#text/plain
+packages/gdbm/fpmake.pp svneol=native#text/plain
+packages/gdbm/src/gdbm.pp svneol=native#text/plain
+packages/gdbm/tests/testgdbm.pp svneol=native#text/plain
+packages/gdbm/tests/testgdbm2.pp svneol=native#text/plain
 packages/hash/Makefile svneol=native#text/plain
 packages/hash/Makefile.fpc svneol=native#text/plain
 packages/hash/examples/md5.ref svneol=native#text/plain
@@ -4114,6 +4121,12 @@ packages/libc/src/wordexph.inc svneol=native#text/plain
 packages/libc/src/wordsizeh.inc svneol=native#text/plain
 packages/libc/src/xlocaleh.inc svneol=native#text/plain
 packages/libc/src/xopen_limh.inc svneol=native#text/plain
+packages/libcurl/Makefile svneol=native#text/plain
+packages/libcurl/Makefile.fpc svneol=native#text/plain
+packages/libcurl/fpmake.pp svneol=native#text/plain
+packages/libcurl/src/libcurl.pp svneol=native#text/plain
+packages/libcurl/tests/testcurl.pp svneol=native#text/plain
+packages/libcurl/tests/teststream.pp svneol=native#text/plain
 packages/libpng/Makefile svneol=native#text/plain
 packages/libpng/Makefile.fpc svneol=native#text/plain
 packages/libpng/fpmake.pp svneol=native#text/plain
@@ -4377,6 +4390,17 @@ packages/sqlite/src/sqlitedb.pas svneol=native#text/plain
 packages/sqlite/tests/test.pas svneol=native#text/plain
 packages/sqlite/tests/testapiv3x.README svneol=native#text/plain
 packages/sqlite/tests/testapiv3x.pp svneol=native#text/plain
+packages/syslog/Makefile svneol=native#text/plain
+packages/syslog/Makefile.fpc svneol=native#text/plain
+packages/syslog/fpmake.pp svneol=native#text/plain
+packages/syslog/src/systemlog.pp svneol=native#text/plain
+packages/syslog/tests/testlog.pp svneol=native#text/plain
+packages/tcl/Makefile svneol=native#text/plain
+packages/tcl/Makefile.fpc svneol=native#text/plain
+packages/tcl/fpmake.pp svneol=native#text/plain
+packages/tcl/src/tcl80.pp svneol=native#text/plain
+packages/tcl/tests/tcl_demo.pp svneol=native#text/plain
+packages/tcl/tests/test.tcl svneol=native#text/plain
 packages/unixutil/Makefile svneol=native#text/plain
 packages/unixutil/Makefile.fpc svneol=native#text/plain
 packages/unixutil/fpmake.pp svneol=native#text/plain
