--- a/.gitattributes
+++ b/.gitattributes
@@ -4174,6 +4174,25 @@ packages/odbc/src/odbcsql.pas svneol=native#text/plain
 packages/odbc/src/odbcsqldyn.pas svneol=native#text/plain
 packages/odbc/tests/testodbc.mdb -text
 packages/odbc/tests/testodbc.pp svneol=native#text/plain
+packages/opengl/Makefile svneol=native#text/plain
+packages/opengl/Makefile.fpc svneol=native#text/plain
+packages/opengl/examples/Makefile svneol=native#text/plain
+packages/opengl/examples/Makefile.fpc svneol=native#text/plain
+packages/opengl/examples/bounce.pp svneol=native#text/plain
+packages/opengl/examples/glutdemo.pp svneol=native#text/plain
+packages/opengl/examples/glxtest.pp svneol=native#text/plain
+packages/opengl/examples/morph3d.pp svneol=native#text/plain
+packages/opengl/examples/radblur.pp svneol=native#text/plain
+packages/opengl/fpmake.pp svneol=native#text/plain
+packages/opengl/glunits.txt svneol=native#text/plain
+packages/opengl/readme svneol=native#text/plain
+packages/opengl/src/gl.pp svneol=native#text/plain
+packages/opengl/src/glext.pp svneol=native#text/plain
+packages/opengl/src/glu.pp svneol=native#text/plain
+packages/opengl/src/glut.pp svneol=native#text/plain
+packages/opengl/src/glx.pp svneol=native#text/plain
+packages/opengl/src/tinygl.inc svneol=native#text/plain
+packages/opengl/src/tinyglh.inc svneol=native#text/plain
 packages/oracle/Makefile svneol=native#text/plain
 packages/oracle/Makefile.fpc svneol=native#text/plain
 packages/oracle/README svneol=native#text/plain
